overlays/gke/kafka-ui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui-httproute
  namespace: infra
spec:
  parentRefs:
    - name: playground-gateway
      namespace: argocd
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kafka
      backendRefs:
        - name: kafka-ui
          namespace: infra
          port: 80
